# embedded-usbip

./: .clang-format  CMakeLists.txt  CheckTypeExists.cmake
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindCheck.cmake
src/: CMakeLists.txt  conv.c  conv.h  debug.h  heap.c  heap.h  linked_list.c  linked_list.h  main.c  mem_pool.c  mem_pool.h  queue.c  queue.h  sock.h  types.h  usbip.c  usbip.h  usbip_types.h  vhci.c  vhci.h
src/usb/: dev.c  dev.h  urb.h  vhci.c  vhci.h
src/usb/dev/: cdc_acm.c
test/: CMakeLists.txt  heap.c  linked_list.c  mem_pool.c  queue.c  test.h
