include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)

#find_package(check REQUIRED)
#include_directories(${check_INCLUDE_DIRS})
#link_directories(${check_LIBRARY_DIRS})

#add_executable(mem_pool mem_pool.c)
#target_link_libraries(mem_pool ${PROJECT_NAME} ${check_LIBRARIES})

#add_executable(linked_list linked_list.c)
#target_link_libraries(linked_list ${PROJECT_NAME} ${check_LIBRARIES})
